2008-08-24  Jon Honeycutt  <jhoneycutt@apple.com>

        Cannot get the focused accessible object from the root object.

        AccessibleBase::get_AccFocus() checks whether the focused object is a
        child of the current object, but 
        http://msdn.microsoft.com/en-us/library/ms696150(VS.85).aspx states that
        the result is the object itself, if it has focus, or a child object of
        the active window, not a child of the object.

        Reviewed by Sam Weinig.

        * AccessibleBase.cpp:
        (AccessibleBase::get_accFocus): Don't check whether the focused object
        is our child.

2008-08-18  Jon Honeycutt  <jhoneycutt@apple.com>

        Add SPI to make a Windows WebView transparent.

        Reviewed by Dan Bernstein.

        * Interfaces/IWebViewPrivate.idl:
        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::transitionToCommittedForNewPage): Call
        updateBackground() when a new frame is attached, matching the Mac.
        * WebFrame.cpp:
        (WebFrame::updateBackground): Propagate WebView transparency to ourself
        and our child frames.
        * WebFrame.h:
        * WebView.cpp:
        (WebView::WebView):
        (WebView::paintIntoBackingStore): Pass m_transparent when creating a
        GraphicsContext, so the context will be created with an alpha channel.
        (WebView::setTransparent):
        (WebView::transparent):
        * WebView.h:

2008-08-12  Jon Honeycutt  <jhoneycutt@apple.com>

        Add SPI to get a handle to the WebView's backing store bitmap.

        Reviewed by Dan Bernstein.

        * Interfaces/IWebViewPrivate.idl:
        * WebView.cpp:
        (WebView::backingStore):
        * WebView.h:

2008-08-21 Jonas Klink <klinktech@gmail.com>

        Reviewed by Jon Honeycutt.

        Fix https://bugs.webkit.org/show_bug.cgi?id=20231
        Bug 20231: accNavigate: no screen element found in the specified direction should return S_FALSE
