@@ -285,6 +285,17 @@ HRESULT STDMETHODCALLTYPE WebFrame::setIsDisconnected(
     return E_FAIL;
 }
 
+HRESULT STDMETHODCALLTYPE WebFrame::setExcludeFromTextSearch(
+    /* [in] */ BOOL flag)
+{
+    if (Frame* frame = core(this)) {
+        frame->setExcludeFromTextSearch(flag);
+        return S_OK;
+    }
+
+    return E_FAIL;
+}
+
 HRESULT STDMETHODCALLTYPE WebFrame::paintDocumentRectToContext(
     /* [in] */ RECT rect,
     /* [in] */ OLE_HANDLE deviceContext)
